--- a/ProyectoDiseñoSotfware/nbproject/project.properties
+++ b/ProyectoDiseñoSotfware/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.jar=${dist.dir}/ProyectoDise\u00f1oSotfware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AspectJForNetBeans-1.1.1.zip=C:\\Users\\Henry\\Downloads\\AspectJForNetBeans-1.1.1.zip
+file.reference.aspectjrt.jar=C:\\Users\\Henry\\Downloads\\lib\\ext\\aspectjrt.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -45,7 +47,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.AspectJForNetBeans-1.1.1.zip}:\
+    ${file.reference.aspectjrt.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
