agrego base de datos

--- a/ProyectoDiseñoSotfware/nbproject/project.properties
+++ b/ProyectoDiseñoSotfware/nbproject/project.properties
@@ -49,7 +49,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.AspectJForNetBeans-1.1.1.zip}:\
-    ${file.reference.aspectjrt.jar}
+    ${file.reference.aspectjrt.jar}:\
+    ${libs.testng.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
